# tiny-transformer-lab

./: .gitignore  .pre-commit-config.yaml  README.md  README_models.md  README_models_A2.md  README_models_A3.md  Readme.md  garden_project.yml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  spec-check.yml
conf/: base.yaml  config.yaml  mlflow.yaml  paths.yaml
conf/data/: sample_dataset.yaml
conf/model/: graph.yaml  hyper.yaml  linear.yaml  sparse.yaml  vanilla.yaml
conf/trainer/: default.yaml  longctx.yaml
data/raw/: train.jsonl
docs/: TTL-B1-ADR.md  TTL-B1-CLI.md  TTL-B1-Design.md  TTL-B1-Metrics.md  TTL-B1-Overview.md  TTL-B1-Registry.md  TTL-B1-Testing.md  TTL-B2-MLflow.md
spec/A1/: spec_A1.json.v2
spec/A2/: spec_A2.json.v2
spec/B1/: README.md  tiny-transformer-lab.B1.spec.v2.json
specs/: A1.json.v2
test/e2e/: process_smoke_test.py  validation_smoke_test.py
test/integration/: process_cli_test.py  validation_cli_test.py
tests/e2e/: test_end_to_end_process_and_manifest_smoke.py  test_longctx_bench_smoke.py  test_mlflow_pipeline_smoke.py  test_roles_eval_smoke.py  test_smoke.py  test_tok_pipeline_smoke.py  test_train_smoke.py
tests/integration/: test_cli.py  test_cli_process.py  test_cli_process_mlflow.py  test_cli_tokenizer.py  test_cli_tokenizer_mlflow.py  test_cli_validate.py  test_mlflow_utils.py  test_tok_cli.py
tests/resources/: sample.jsonl  sample.parquet
tests/unit/: test_convert.py  test_geometry_maps.py  test_graph_bias.py  test_hyper_forward.py  test_linear_forward.py  test_metrics_writer.py  test_mlflow_utils.py  test_process.py  test_registry.py  test_sparse_mask.py  test_split.py  test_stats.py  test_tokenizer.py  test_validate.py  test_vanilla_forward.py
ttl/: __init__.py  __main__.py
ttl/cli/: __init__.py  main.py  process.py  validation.py
ttl/core/: __init__.py  proccess.py  process.py
ttlab/: __init__.py  __main__.py  cli.py  logging.py  mlflow_utils.py  paths.py
ttlab/cli/: main.py  (+10 more)
(+43 files in other folders)
