[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ttl-cli-mvp"
version = "0.1.0"
description = "Minimal Typer CLI MVP for learning"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
ttl = "ttl.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ttl*"]
