[project]
name = "tiny-transformer-lab"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pyyaml>=6",
  "tokenizers>=0.14,<0.16",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ttlab*"]
exclude = ["tests*", "conf*", "specs*"]

[project.scripts]
ttlab = "ttlab.cli.main:main"

[project.optional-dependencies]
mlflow = ["mlflow>=2.16.0"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests/unit", "tests/integration", "tests/e2e"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"

[tool.ttlab.mlflow]
tracking_uri = "http://127.0.0.1:5000"
s3_endpoint_url = "http://127.0.0.1:9000"
aws_access_key_id = "admin"
aws_secret_access_key = "adminadmin"